fix no scroll on mobile

--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -84,7 +84,8 @@ body {
   font-size: 1.6rem;
   line-height: 1.7;
   color: var(--color-grey-dark-2);
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  position: relative; }
 
 .no-scroll {
   overflow: hidden; }
