--- a/assets/stylesheets/layout/container.scss
+++ b/assets/stylesheets/layout/container.scss
@@ -10,6 +10,7 @@ body {
   line-height: 1.7;
   color: var(--color-grey-dark-2);
   box-sizing: border-box;
+  position: relative;
 }
 
 .no-scroll {
